--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ build/GreetingBot/xref-GreetingBot.html
 __pycache__/param_greetingBot.cpython-38.pyc
 sound/tm2_power001.wav
 data/userExpList.csv
+2022-06-16_224503.png
+commentLog.csv
+追加アイデア.md
