update:dice.pyを分けることを止めた、微修正

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ commentLog.csv
 雑多資料/方法2-1.jpg
 雑多資料/方法2-2.jpg
 __pycache__/nDnDICE.cpython-38.pyc
+build/GreetingBot/Tree-00.toc
+build/GreetingBot/Tree-01.toc
+build/GreetingBot/Tree-02.toc
