--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ __pycache__/nDnDICE.cpython-38.pyc
 build/GreetingBot/Tree-00.toc
 build/GreetingBot/Tree-01.toc
 build/GreetingBot/Tree-02.toc
+nDnDICE.py
